--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 include:
   - local: .gitlab/vars/dependency-proxy.yml
     rules:
-      - if: $CI_PROJECT_NAMESPACE == "Taucher2003-Group"
+      - if: $CI_PROJECT_ID == "33426977" # Taucher2003-Group/T2003-Utils
 
 variables:
   MAVEN_IMAGE: ${PROXY_PREFIX}maven:3.8.4-openjdk
