--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,17 @@
     <modules>
         <module>tjda</module>
         <module>common</module>
+        <module>log</module>
     </modules>
 
     <properties>
-        <t2003-utils.version>1.0-SNAPSHOT</t2003-utils.version>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <t2003-utils.version>1.0.0${t2003-utils.version-suffix}</t2003-utils.version>
+        <t2003-utils.version-suffix/>
+        <t2003-utils.java.version>11</t2003-utils.java.version>
+        <maven.compiler.source>${t2003-utils.java.version}</maven.compiler.source>
+        <maven.compiler.target>${t2003-utils.java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jacoco.version>0.8.7</jacoco.version>
     </properties>
 
     <name>T2003-Utils › Parent</name>
@@ -44,14 +48,14 @@
     </scm>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
         <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+        <snapshotRepository>
             <id>gitlab</id>
             <url>https://gitlab.com/api/v4/projects/33426977/packages/maven</url>
-        </repository>
+        </snapshotRepository>
     </distributionManagement>
 
     <dependencies>
@@ -74,7 +78,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.11.1</version>
+            <version>3.22.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
