--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ deploy-gitlab:
     T_USERNAME: "Job-Token"
     T_PASSWORD: $CI_JOB_TOKEN
     T_CONFIG: "gitlab"
-    T_DEPLOY_MAVEN_CLI_OPTS: "-Dt2003-utils.version=$CI_COMMIT_SHA"
+    T_DEPLOY_MAVEN_CLI_OPTS: "-Dt2003-utils.version=$CI_COMMIT_SHA -Ddeploy.prod.id=gitlab -Ddeploy.prod.url=https://gitlab.com/api/v4/projects/33426977/packages/maven"
     T_MAVEN_PROFILES: ",no-sign"
   rules:
     - if: $CI_PROJECT_ID != "33426977"
