--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,3 +107,36 @@ deploy-gitlab-custom:
       when: never
     - when: manual
       allow_failure: true
+
+.javadoc-rules:
+  rules:
+    - if: $CI_PROJECT_ID != "33426977"
+      when: never
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $T_FORCE_JAVADOC_DEPLOYMENT
+
+build-javadoc:
+  extends:
+    - .javadoc-rules
+  stage: build
+  script:
+    - ./.gitlab/scripts/build-javadocs.sh $CI_PROJECT_URL
+  artifacts:
+    paths:
+      - javadoc
+    expire_in: 1 day
+
+pages:
+  extends:
+    - .javadoc-rules
+  stage: deploy
+  environment:
+    name: gitlab-javadoc
+    action: start
+  script:
+    - mv javadoc public
+  artifacts:
+    paths:
+      - public
+    expire_in: 1 day
