--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - sync
   - build
   - test
   - security
@@ -21,6 +22,7 @@ variables:
 
 default:
   image: $T_MAVEN_IMAGE
+  interruptible: true
   cache:
     when: on_success
     paths:
@@ -36,6 +38,18 @@ default:
 
 workflow:
   rules: *workflow-rules
+
+no-interrupt:
+  stage: sync
+  interruptible: false
+  image: ${PROXY_PREFIX}alpine:edge
+  script:
+    - echo "This jobs makes sure this pipeline won't be interrupted! See https://docs.gitlab.com/ee/ci/yaml/#interruptible."
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_TAG
+    - when: manual
+      allow_failure: true
 
 build:
   stage: build
