--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,5 +13,6 @@
     <artifactId>common</artifactId>
 
     <name>T2003-Utils › Common</name>
-    <description>This module is part of T2003-Utils and contains all utils unrelated to any special libraries</description>
+    <description>This module is part of T2003-Utils and contains all utils unrelated to any special libraries
+    </description>
 </project>
